Added ktlint plugin instead of task