@@ -12,6 +12,7 @@ plugins {
     id("dagger.hilt.android.plugin")
     id("io.gitlab.arturbosch.detekt")
     id("kotlinx-serialization")
+    id("org.jlleitschuh.gradle.ktlint")
 }
 
 val keystorePropertiesFile = rootProject.file("keystore.properties")
@@ -45,7 +46,7 @@ android {
         minSdk = minSdkVersion
         targetSdk = targetSdkVersion
         versionCode = 1000 * (1000 * versionMajor + 100 * versionMinor + versionPatch) + versionBuild
-        versionName = "${versionMajor}.${versionMinor}.${versionPatch}.${versionBuild}"
+        versionName = "$versionMajor.$versionMinor.$versionPatch.$versionBuild"
 
         vectorDrawables.useSupportLibrary = true
 
@@ -93,41 +94,6 @@ android {
 
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_17.toString()
-    }
-
-    val ktlint by configurations.creating
-
-    dependencies {
-        ktlint(libs.ktlint) {
-            attributes {
-                attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
-            }
-        }
-    }
-
-    val outputDir = "${project.buildDir}/reports/ktlint/"
-    val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
-
-    val ktlintCheck by tasks.creating(JavaExec::class) {
-        inputs.files(inputFiles)
-        outputs.dir(outputDir)
-
-        description = "Check Kotlin code style."
-        classpath = ktlint
-        mainClass.set("com.pinterest.ktlint.Main")
-        args = listOf("src/**/*.kt")
-        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-    }
-
-    val ktlintFormat by tasks.creating(JavaExec::class) {
-        inputs.files(inputFiles)
-        outputs.dir(outputDir)
-
-        description = "Fix Kotlin code style deviations."
-        classpath = ktlint
-        mainClass.set("com.pinterest.ktlint.Main")
-        args = listOf("-F", "src/**/*.kt")
-        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
     }
 
     packagingOptions {
